tags/v1.10.0-rc2/html/_sources/libs/core/algorithms/api/full_api.rst.txt

..
    Copyright (C) 2019 Thomas Heller

    Distributed under the Boost Software License, Version 1.0. (See accompanying
    file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)

.. _modules_algorithms_api:

-------------------------------------------------------------------------------
algorithms
-------------------------------------------------------------------------------

See :ref:`public_api` for a list of names and headers that are part of the public
|hpx| API.


.. toctree::
   :maxdepth: 1

   /libs/core/algorithms/api/task_block.rst
   /libs/core/algorithms/api/task_group.rst
   /libs/core/algorithms/api/adjacent_difference.rst
   /libs/core/algorithms/api/adjacent_find.rst
   /libs/core/algorithms/api/all_any_none.rst
   /libs/core/algorithms/api/copy.rst
   /libs/core/algorithms/api/count.rst
   /libs/core/algorithms/api/destroy.rst
   /libs/core/algorithms/api/ends_with.rst
   /libs/core/algorithms/api/equal.rst
   /libs/core/algorithms/api/exclusive_scan.rst
   /libs/core/algorithms/api/fill.rst
   /libs/core/algorithms/api/find.rst
   /libs/core/algorithms/api/for_each.rst
   /libs/core/algorithms/api/for_loop.rst
   /libs/core/algorithms/api/for_loop_induction.rst
   /libs/core/algorithms/api/for_loop_reduction.rst
   /libs/core/algorithms/api/generate.rst
   /libs/core/algorithms/api/includes.rst
   /libs/core/algorithms/api/inclusive_scan.rst
   /libs/core/algorithms/api/is_heap.rst
   /libs/core/algorithms/api/is_partitioned.rst
   /libs/core/algorithms/api/is_sorted.rst
   /libs/core/algorithms/api/lexicographical_compare.rst
   /libs/core/algorithms/api/make_heap.rst
   /libs/core/algorithms/api/merge.rst
   /libs/core/algorithms/api/minmax.rst
   /libs/core/algorithms/api/mismatch.rst
   /libs/core/algorithms/api/move.rst
   /libs/core/algorithms/api/nth_element.rst
   /libs/core/algorithms/api/partial_sort.rst
   /libs/core/algorithms/api/partial_sort_copy.rst
   /libs/core/algorithms/api/partition.rst
   /libs/core/algorithms/api/reduce.rst
   /libs/core/algorithms/api/reduce_by_key.rst
   /libs/core/algorithms/api/remove.rst
   /libs/core/algorithms/api/remove_copy.rst
   /libs/core/algorithms/api/replace.rst
   /libs/core/algorithms/api/reverse.rst
   /libs/core/algorithms/api/rotate.rst
   /libs/core/algorithms/api/search.rst
   /libs/core/algorithms/api/set_difference.rst
   /libs/core/algorithms/api/set_intersection.rst
   /libs/core/algorithms/api/set_symmetric_difference.rst
   /libs/core/algorithms/api/set_union.rst
   /libs/core/algorithms/api/shift_left.rst
   /libs/core/algorithms/api/shift_right.rst
   /libs/core/algorithms/api/sort.rst
   /libs/core/algorithms/api/sort_by_key.rst
   /libs/core/algorithms/api/stable_sort.rst
   /libs/core/algorithms/api/starts_with.rst
   /libs/core/algorithms/api/swap_ranges.rst
   /libs/core/algorithms/api/transform.rst
   /libs/core/algorithms/api/transform_exclusive_scan.rst
   /libs/core/algorithms/api/transform_inclusive_scan.rst
   /libs/core/algorithms/api/transform_reduce.rst
   /libs/core/algorithms/api/transform_reduce_binary.rst
   /libs/core/algorithms/api/uninitialized_copy.rst
   /libs/core/algorithms/api/uninitialized_default_construct.rst
   /libs/core/algorithms/api/uninitialized_fill.rst
   /libs/core/algorithms/api/uninitialized_move.rst
   /libs/core/algorithms/api/uninitialized_relocate.rst
   /libs/core/algorithms/api/uninitialized_value_construct.rst
   /libs/core/algorithms/api/unique.rst
   /libs/core/algorithms/api/container_algorithms_adjacent_difference.rst
   /libs/core/algorithms/api/container_algorithms_adjacent_find.rst
   /libs/core/algorithms/api/container_algorithms_all_any_none.rst
   /libs/core/algorithms/api/container_algorithms_copy.rst
   /libs/core/algorithms/api/container_algorithms_count.rst
   /libs/core/algorithms/api/container_algorithms_destroy.rst
   /libs/core/algorithms/api/container_algorithms_ends_with.rst
   /libs/core/algorithms/api/container_algorithms_equal.rst
   /libs/core/algorithms/api/container_algorithms_exclusive_scan.rst
   /libs/core/algorithms/api/container_algorithms_fill.rst
   /libs/core/algorithms/api/container_algorithms_find.rst
   /libs/core/algorithms/api/container_algorithms_for_each.rst
   /libs/core/algorithms/api/container_algorithms_for_loop.rst
   /libs/core/algorithms/api/container_algorithms_generate.rst
   /libs/core/algorithms/api/container_algorithms_includes.rst
   /libs/core/algorithms/api/container_algorithms_inclusive_scan.rst
   /libs/core/algorithms/api/container_algorithms_is_heap.rst
   /libs/core/algorithms/api/container_algorithms_is_partitioned.rst
   /libs/core/algorithms/api/container_algorithms_is_sorted.rst
   /libs/core/algorithms/api/container_algorithms_lexicographical_compare.rst
   /libs/core/algorithms/api/container_algorithms_make_heap.rst
   /libs/core/algorithms/api/container_algorithms_merge.rst
   /libs/core/algorithms/api/container_algorithms_minmax.rst
   /libs/core/algorithms/api/container_algorithms_mismatch.rst
   /libs/core/algorithms/api/container_algorithms_move.rst
   /libs/core/algorithms/api/container_algorithms_nth_element.rst
   /libs/core/algorithms/api/container_algorithms_partial_sort.rst
   /libs/core/algorithms/api/container_algorithms_partial_sort_copy.rst
   /libs/core/algorithms/api/container_algorithms_partition.rst
   /libs/core/algorithms/api/container_algorithms_reduce.rst
   /libs/core/algorithms/api/container_algorithms_remove.rst
   /libs/core/algorithms/api/container_algorithms_remove_copy.rst
   /libs/core/algorithms/api/container_algorithms_replace.rst
   /libs/core/algorithms/api/container_algorithms_reverse.rst
   /libs/core/algorithms/api/container_algorithms_rotate.rst
   /libs/core/algorithms/api/container_algorithms_search.rst
   /libs/core/algorithms/api/container_algorithms_set_difference.rst
   /libs/core/algorithms/api/container_algorithms_set_intersection.rst
   /libs/core/algorithms/api/container_algorithms_set_symmetric_difference.rst
   /libs/core/algorithms/api/container_algorithms_set_union.rst
   /libs/core/algorithms/api/container_algorithms_shift_left.rst
   /libs/core/algorithms/api/container_algorithms_shift_right.rst
   /libs/core/algorithms/api/container_algorithms_sort.rst
   /libs/core/algorithms/api/container_algorithms_stable_sort.rst
   /libs/core/algorithms/api/container_algorithms_starts_with.rst
   /libs/core/algorithms/api/container_algorithms_swap_ranges.rst
   /libs/core/algorithms/api/container_algorithms_transform.rst
   /libs/core/algorithms/api/container_algorithms_transform_exclusive_scan.rst
   /libs/core/algorithms/api/container_algorithms_transform_inclusive_scan.rst
   /libs/core/algorithms/api/container_algorithms_transform_reduce.rst
   /libs/core/algorithms/api/container_algorithms_uninitialized_copy.rst
   /libs/core/algorithms/api/container_algorithms_uninitialized_default_construct.rst
   /libs/core/algorithms/api/container_algorithms_uninitialized_fill.rst
   /libs/core/algorithms/api/container_algorithms_uninitialized_move.rst
   /libs/core/algorithms/api/container_algorithms_uninitialized_value_construct.rst
   /libs/core/algorithms/api/container_algorithms_unique.rst
   /libs/core/algorithms/api/range.rst
